# hogi

./: .gitignore  CMakeLists.txt  README.md
include/: gradientMap.hpp
include/hogi/: boundary_extraction.hpp  constants.hpp  dominant_gradient.hpp  gradientMap.hpp  gradient_map.hpp  types.hpp  utils.hpp  weights.hpp
src/: boundary_extraction.cpp  dominant_gradient.cpp  gradientMap.cpp  gradient_map.cpp  hogi.cpp
